# moneymoney

./: Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: publish-release.yml
moneymoney/: currency_codes.py  defaults.py  money.py  presets.py
tests/: conftest.py  test_currency_codes.py  test_money.py  test_presets.py
