[build-system]
# todo - check the latest version on this
requires = ["setuptools>=67.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-template"
# Make sure this matches the description in GitHub, in the README.md and wherever applies
description = "python-template"
readme = "README.md"
authors = [{ "name" = "w0rmr1d3r" }]
# todo
#license = { text = "MIT" }
# todo
#classifiers = []
# todo Make sure this matches the keywords in GitHub
#keywords = []
version = "0.0.1"
# Minimum supported version
requires-python = ">=3.9.0"

# Always try to be compatible with these versions and above
dependencies = []

[project.optional-dependencies]
# Always try to be compatible with these versions and above
# todo - search for latest versions and update project and template accordingly
dev = [
    "black>=23.0.0",
    "coverage>=6.3.2",
    "docformatter>=1.5.1",
    "flake8>=6.0.0",
    "isort>=5.10.0",
    "pip-tools>=6.5.0",
    "pylint>=2.15.10",
    "pytest>=6.2.5",
]

[project.urls]
"Homepage" = "https://github.com/w0rmr1d3r/python-template"
"Repository" = "https://github.com/w0rmr1d3r/python-template"
"Bug Tracker" = "https://github.com/w0rmr1d3r/python-template/issues"
"Documentation" = "https://github.com/w0rmr1d3r/python-template"
"Changelog" = "https://github.com/w0rmr1d3r/python-template/releases"

[tool.setuptools]
packages = ["python-template"]

[tool.black]
line-length = 120
exclude = '''
/(
  | \.venv
  | venv
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 120

[tool.pylint.'MESSAGES CONTROL']
# C0114 - missing module docstring - does not apply (yet)
# disable = "C0114"
fail-under = 8
max-line-length = 120
